# RPA-DISCORD

./: .gitignore  README.md  adspower.yaml  check-login.json  pyproject.toml
automation/: discord_authorization.json
src/adspower_rpa/: __init__.py  checker.py  cli.py  client.py  config.py  models.py  scenarios.py
